...
            TabView(selection: $selectedTab) {
                TodoListView()
                    .tabItem {
                        Label(Localization.labels.allTodosNav, systemImage: "list.bullet")
                    }
                    .tag(ClaraTab.all.intValue)
                    .accessibility(identifier: "AllTodosTab")
                TodaysListView()
                    .tabItem {
                        Label(Localization.labels.todayNav, systemImage: "calendar")
                    }.tag(ClaraTab.today.intValue)
                    .accessibility(identifier: "TodayTab")
                if categotyViewModel.hasCategories() {
...
        }
    }

}

enum ClaraTab {
    case all
    case today
    case recurringtasks
    case categories
    
    var intValue : Int{
        switch self {
        case .all: return 0
...
