...
                Text(Localization.labels.noTodosRandomTodo)
                    .font(Font.app.normal)
                    .foregroundColor(Color.theme.surfaceGlassTextColor)
                    .onTapGesture {
                        isPresented = false
                    }
                    .accessibilityIdentifier("NoTodosText")
            }
        }
        .frame(maxWidth: 400, maxHeight: 500)
        .background(Color.theme.surfaceGlassColor)
        .cornerRadius(20)
        .padding()
...
