//
//  Views/Menu/SettingsView.swift
//  ClaraBrainBuddy
//
//  Created by Karen on 27.04.25.
//

import SwiftUI
import Foundation

struct SettingsView: View {

    @Environment(\.presentationMode) var presentationMode
    
    @ObservedObject var settingsViewModel: SettingsViewModel
    
    @State private var showTimeValidationAlert = false
    
    @State private var notificationsGranted: Bool = false
    
    init(settingsViewModel: SettingsViewModel) {
        self.settingsViewModel = settingsViewModel
    }

    var body: some View {
        NavigationStack {
            Form {
                Section(header: Text(Localization.labels.maxTodosForToday)) {
                    Stepper(value: $settingsViewModel.settings.maxTodosForToday, in: 1...100) {
                        Text("\(settingsViewModel.settings.maxTodosForToday)")
                            .foregroundColor(Color.theme.primary)
                            .accessibilityIdentifier("MaxTodosStepperValue")
                    }
                    .accessibilityIdentifier("MaxTodosStepper")
                }
                .sectionSytle()

                Section(header: Text(Localization.labels.defaultEstimatedTime)) {
                    Stepper(value: $settingsViewModel.settings.defaultEstimatedTimeForRecurringTasks, in: 1...120) {
                        Text("\(settingsViewModel.settings.defaultEstimatedTimeForRecurringTasks)")
                            .foregroundColor(Color.theme.primary)
                            .accessibilityIdentifier("EstimatedTimeStepperValue")
                    }
                    .accessibilityIdentifier("EstimatedTimeStepper")
                }
                .sectionSytle()

                Section(header: Text(Localization.labels.defaultEnergyLevelCalculation)) {
                    Stepper(value: $settingsViewModel.settings.defaultTimeForEnergyLevelCalculation, in: 1...60) {
                        Text("\(settingsViewModel.settings.defaultTimeForEnergyLevelCalculation)")
                            .foregroundColor(Color.theme.primary)
                            .accessibilityIdentifier("EnergyCalcTimeStepperValue")
                    }
                    .accessibilityIdentifier("EnergyCalcTimeStepper")
                }
                .sectionSytle()

                Section(header: Text(Localization.labels.daysAddedForDueDate)) {
                    Stepper(value: $settingsViewModel.settings.daysAddedForDefaultDueDate, in: 1...90) {
                        Text("\(settingsViewModel.settings.daysAddedForDefaultDueDate)")
                            .foregroundColor(Color.theme.primary)
                            .accessibilityIdentifier("DueDateDaysStepperValue")
                    }
                    .accessibilityIdentifier("DueDateDaysStepper")
                }
                .sectionSytle()
                
                if !notificationsGranted {
                    Section(header: Text(Localization.labels.dailyReminders)) {
                        Text(Localization.messages.enableNotifications)
                            .font(Font.app.tiny)
                            .foregroundColor(Color.theme.red)
                        
                        Button(action: {
                            NotificationManager.shared.openAppSettings()
                        }) {
                            Text("Open App Settings")
                                .font(Font.app.tiny)
                        }
                    }
                    .sectionSytle()
                } else {
                    Section(header: Text(Localization.labels.dailyReminders)) {
                        DatePicker(Localization.labels.morningReminder,
                                   selection: $settingsViewModel.settings.morningNotification,
                                   displayedComponents: .hourAndMinute)
                        .disabled(!notificationsGranted)
                        .accessibilityIdentifier("MorningReminderPicker")
                    }
                    .sectionSytle()
                    
                    Section() {
                        DatePicker(Localization.labels.eveningReminder,
                                   selection: $settingsViewModel.settings.eveningNotification,
                                   displayedComponents: .hourAndMinute)
                        .disabled(!notificationsGranted)
                        .accessibilityIdentifier("EveningReminderPicker")
                    }
                    .sectionSytle()
                }
                
                
                Section(header: Text(Localization.labels.displayOptions)) {
                    Toggle(Localization.labels.showSymbols, isOn: $settingsViewModel.settings.showSymbols)
                        .tint(Color.theme.green)
                        .accessibilityIdentifier("ShowSymbolsToggle")
                }
                .sectionSytle()

                Section() {
                    Toggle(Localization.labels.showDueDate, isOn: $settingsViewModel.settings.showDueDateInSchedule)
                        .tint(Color.theme.green)
                        .accessibilityIdentifier("ShowDueDateInListToggle")
                }
                .sectionSytle()
                
                Section() {
                    Toggle(Localization.labels.showResistanceInTodaysView, isOn: $settingsViewModel.settings.showResistanceInTodayView)
                        .tint(Color.theme.green)
                        .accessibilityIdentifier("ShowResistanceInTodayViewToggle")
                }
                .sectionSytle()

                Section() {
                    Toggle(Localization.labels.showResistanceInAllTodosView, isOn: $settingsViewModel.settings.showResistanceInAllTodosView)
                        .tint(Color.theme.green)
                        .accessibilityIdentifier("ShowResistanceInAllTodosViewToggle")
                }
                .sectionSytle()
                
                Button {
                    if !isMorningBeforeEvening() {
                        showTimeValidationAlert = true
                        return
                    }
                    settingsViewModel.saveSettings()
                    NotificationManager.shared.requestAuthorization { granted in
                        if granted {
                            NotificationManager.shared.rescheduleDailyNotifications(
                                morning: settingsViewModel.settings.morningNotification,
                                evening: settingsViewModel.settings.eveningNotification
                            )
                        } else {
                            print("Notifications not granted.")
                        }
                    }
                    presentationMode.wrappedValue.dismiss()
                } label:  {
                    Label(Localization.labels.save, systemImage: "none")
                        .frame(maxWidth: .infinity)
                        .bold()
                        .foregroundColor(Color.theme.primary)
                }
                .buttonStyle(.borderedProminent)
                .accessibilityIdentifier("SaveSettingsButton")
            }
            .appTheme()
            .toolbar {
                ToolbarItem(placement: .topBarLeading) {
                    Button(action: {
                        presentationMode.wrappedValue.dismiss()
                    }) {
                        Text(Localization.labels.back)
                            .font(Font.app.button)
                    }
                    .accessibilityIdentifier("SettingsBackButton")
                }
                ToolbarItem(placement: .principal) {
                    Text(Localization.labels.properties)
                        .foregroundColor(Color.theme.primary)
                        .font(Font.app.header)
                }
            }
            .alert(isPresented: $showTimeValidationAlert) {
                Alert(
                    title: Text(Localization.errors.invalidTimeSelectionTitle),
                    message: Text(Localization.errors.invalidTimeSelectionMessage),
                    dismissButton: .default(Text(Localization.labels.ok))
                )
            }
            .navigationBarTitleDisplayMode(.inline)
        }
        .onAppear {
            checkNotificationPermission()
        }
    }

    
    private func isMorningBeforeEvening() -> Bool {
        let calendar = Calendar.current
        let morningComponents = calendar.dateComponents([.hour, .minute], from: settingsViewModel.settings.morningNotification)
        let eveningComponents = calendar.dateComponents([.hour, .minute], from: settingsViewModel.settings.eveningNotification)
        guard
            let morningDate = calendar.date(from: morningComponents),
            let eveningDate = calendar.date(from: eveningComponents)
        else {
            return true
        }

        return morningDate < eveningDate
    }
    
    private func checkNotificationPermission() {
        
        if CommandLine.arguments.contains("UITestMode") {
            notificationsGranted = true
            return
        }
        
        UNUserNotificationCenter.current().getNotificationSettings { settings in
            DispatchQueue.main.async {
                notificationsGranted = settings.authorizationStatus == .authorized
            }
        }
    }
}
